# code-interpreter

./: .env.example  LICENSE  README.md  README_zh.md  docker-compose.yml  pyproject.toml  start.ps1  start.sh
gateway/: Dockerfile  main.py  meta_config.py  requirements.txt
gateway/fastapis/api/v1/execute/: __init__.py
gateway/fastapis/api/v1/files/: __init__.py
gateway/fastapis/api/v1/files/export/: __init__.py
gateway/models/: backend_service.py  files.py  sandbox_filesystem.py  worker.py
gateway/utils/: aiohttp_client_session_mixin.py  file_hash.py  http_exceptions.py  logger.py
worker/: main.py
worker/fastapis/api/v1/kernel/execute/: __init__.py
worker/models/: kernel.py
