[project]
name = "code-interpreter"
version = "1.1.0"
description = "A stateful, secure, and high-performance Python sandbox"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["gateway", "worker"]
omit = ["*/tests/*", "*/__pycache__/*"]
